# EAE_Firmware

./: .gitignore  CMakeLists.txt  README.md
include/: Config.hpp
include/app/: CoolingController.hpp  PID.hpp  StateMachine.hpp
include/drivers/: CANDefs.hpp  CANParser.hpp  CANSocket.hpp
scripts/: send_can.sh  start_vcan.sh
src/: main.cpp
src/app/: CoolingController.cpp  PID.cpp  StateMachine.cpp
src/drivers/: CANParser.cpp  CANSocket.cpp
tests/: CMakeLists.txt  test_canparser.cpp  test_controller.cpp  test_pid.cpp  test_statemachine.cpp
